# kwave

./: .pre-commit-config.yaml  pyproject.toml
binaries/: README.txt
examples/: example_ivp_binary_sensor_mask.py
kwave/: __init__.py  h5_compare.py  h5_dataclass_helper.py  h5input.py  h5output.py  hdf5_file_format.md  kspaceFirstOrder_runner.py  kwave_funcs.py  shapes.py  utils.py
tests/: test_kspaceFirstOrder.py  test_serialization.py
